<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/helpp"
    android:layout_height="match_parent"
    tools:context="com.hp.major.FindUrWay.HelpActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="138dp"
        android:layout_marginBottom="5dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:paddingTop="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tmetro1"
            android:text="1. METRO :"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:id="@+id/tmetro2"
            android:layout_below="@+id/tmetro1"
            android:text="@string/metrohelp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tauto1"
                android:layout_below="@+id/tmetro2"
                android:text="2. AUTO :"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:id="@+id/tauto2"
                android:layout_below="@+id/tauto1"
                android:text="@string/autohelp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tbus1"
                android:layout_below="@+id/tauto2"
                android:text="3. BUS :"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:id="@+id/tbus2"
                android:layout_below="@+id/tbus1"
                android:text="@string/bushelp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tpickit1"
                android:layout_below="@+id/tbus2"
                android:text="4. PICK IT :"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:id="@+id/tpickit2"
                android:layout_below="@+id/tpickit1"
                android:text="@string/pickithelp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tcurrentlocation1"
                android:layout_below="@+id/tpickit2"
                android:text="5. CURRENT LOCATION :"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:id="@+id/tcurrentlocation2"
                android:layout_below="@+id/tcurrentlocation1"
                android:text="@string/currentlocationhelp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tmyaccount1"
                android:layout_below="@+id/tcurrentlocation2"
                android:text="6. MY ACCOUNT :"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:id="@+id/tmyaccount2"
                android:layout_below="@+id/tmyaccount1"
                android:text="@string/myaccounthelp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tfeedback1"
                android:layout_below="@+id/tmyaccount2"
                android:text="7. FEEDBACK :"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:id="@+id/tfeedback2"
                android:layout_below="@+id/tfeedback1"
                android:text="@string/feedbackhelp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tcontactus1"
                android:layout_below="@+id/tfeedback2"
                android:text="8. CONTACT US :"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:id="@+id/tcontactus2"
                android:layout_below="@+id/tcontactus1"
                android:text="@string/contactushelp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tforum1"
                android:layout_below="@+id/tcontactus2"
                android:text="9. FORUM :"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:id="@+id/tforum2"
                android:layout_below="@+id/tforum1"
                android:text="@string/forumhelp"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>
