<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
<ImageView
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:src="@drawable/here"
    android:id="@+id/img"/>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#ffffff"
            app:hintTextAppearance="@style/MyHintText"
            >

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
               android:paddingLeft="5dp"
                android:inputType="textEmailAddress"
                android:textColor="#ffffff"

               />
        </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#ffffff"
                app:hintTextAppearance="@style/MyHintText">



                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="left|center_horizontal"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:textColor="#ffffff"

                    />
            </android.support.design.widget.TextInputLayout>




        <!-- Login Button -->

        <TextView
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_style1"
            android:text="@string/btn_login"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary" />

        <!-- Link to Login Screen -->

        <TextView
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:text="New Here?   REGISTER"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textStyle="bold"

            android:textSize="15dp" />
    </LinearLayout>




</RelativeLayout>






